initial/src/main/csel/parser/.antlr/CSELParser.py
# Generated from c:\Users\Huy\source\repos\assignment2\initial\src\main\csel\parser\CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'-'", "'+'", 
                     "'*'", "'/'", "'%'", "'+.'", "'==.'", "'True'", "'False'", 
                     "'Call'", "'Let'", "'Continue'", "'Constant'", "'Else'", 
                     "'Elif'", "'Number'", "'String'", "'Boolean'", "'JSON'", 
                     "'For'", "'Break'", "'Function'", "'If'", "'Return'", 
                     "'While'", "'In'", "'.'", "'Of'", "'!'", "'&&'", "'||'", 
                     "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "';'", "':'", "','", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LOGICAL_OP", "MULTIPLYING", 
                      "RL_OP", "BOOLEAN_LITERAL", "WS", "COMMENT", "UNTERMINATED_COMMENT", 
                      "Typ", "ID", "ID_const", "SUB", "ADD", "MUL", "DIV", 
                      "MOD", "SADD", "SEQ", "TRUE", "FALSE", "CALL", "LET", 
                      "CONTINUE", "CONSTANT", "ELSE", "ELSEIF", "Number", 
                      "String", "Boolean", "JSON", "FOR", "BREAK", "FUNCTION", 
                      "IF", "RETURN", "WHILE", "IN", "DOT", "OF", "NEGATION", 
                      "CONJUNCTION", "DISJUNCTION", "ASSIGN", "EQUAL", "NOTEQUAL", 
                      "LESSTHAN", "GREATERTHAN", "LESSTHAN_EQUAL", "GREATERTHAN_EQUAL", 
                      "SEMI", "COLON", "COMMA", "LB", "RB", "LP", "RP", 
                      "LSB", "RSB", "NUM_LITERAL", "STRING_LITERAL", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_var_declare = 1
    RULE_one_var_declare = 2
    RULE_many_const_declare = 3
    RULE_one_const_declare = 4
    RULE_id_list = 5
    RULE_id_list_element = 6
    RULE_id_list_const = 7
    RULE_id_list_element_const = 8
    RULE_composit = 9
    RULE_array_literal = 10
    RULE_array_literal_element = 11
    RULE_literal = 12
    RULE_assign_stm = 13
    RULE_parameter_name = 14
    RULE_param_list_element = 15
    RULE_many_func_declare = 16
    RULE_one_func_declare = 17
    RULE_many_stm = 18
    RULE_stm = 19
    RULE_call_stm = 20
    RULE_function_call = 21
    RULE_return_stm = 22
    RULE_if_stm = 23
    RULE_if_then = 24
    RULE_many_elseif = 25
    RULE_else_part = 26
    RULE_forin_stm = 27
    RULE_forof_stm = 28
    RULE_while_stm = 29
    RULE_break_stm = 30
    RULE_continue_stm = 31
    RULE_exp = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp4 = 36
    RULE_exp5 = 37
    RULE_exp6 = 38
    RULE_exp7 = 39
    RULE_array_cell = 40
    RULE_index_exp = 41
    RULE_json_cell = 42
    RULE_json_key = 43
    RULE_json = 44
    RULE_jsonlist = 45

    ruleNames =  [ "program", "many_var_declare", "one_var_declare", "many_const_declare", 
                   "one_const_declare", "id_list", "id_list_element", "id_list_const", 
                   "id_list_element_const", "composit", "array_literal", 
                   "array_literal_element", "literal", "assign_stm", "parameter_name", 
                   "param_list_element", "many_func_declare", "one_func_declare", 
                   "many_stm", "stm", "call_stm", "function_call", "return_stm", 
                   "if_stm", "if_then", "many_elseif", "else_part", "forin_stm", 
                   "forof_stm", "while_stm", "break_stm", "continue_stm", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "array_cell", "index_exp", "json_cell", "json_key", 
                   "json", "jsonlist" ]

    EOF = Token.EOF
    T__0=1
    LOGICAL_OP=2
    MULTIPLYING=3
    RL_OP=4
    BOOLEAN_LITERAL=5
    WS=6
    COMMENT=7
    UNTERMINATED_COMMENT=8
    Typ=9
    ID=10
    ID_const=11
    SUB=12
    ADD=13
    MUL=14
    DIV=15
    MOD=16
    SADD=17
    SEQ=18
    TRUE=19
    FALSE=20
    CALL=21
    LET=22
    CONTINUE=23
    CONSTANT=24
    ELSE=25
    ELSEIF=26
    Number=27
    String=28
    Boolean=29
    JSON=30
    FOR=31
    BREAK=32
    FUNCTION=33
    IF=34
    RETURN=35
    WHILE=36
    IN=37
    DOT=38
    OF=39
    NEGATION=40
    CONJUNCTION=41
    DISJUNCTION=42
    ASSIGN=43
    EQUAL=44
    NOTEQUAL=45
    LESSTHAN=46
    GREATERTHAN=47
    LESSTHAN_EQUAL=48
    GREATERTHAN_EQUAL=49
    SEMI=50
    COLON=51
    COMMA=52
    LB=53
    RB=54
    LP=55
    RP=56
    LSB=57
    RSB=58
    NUM_LITERAL=59
    STRING_LITERAL=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def many_var_declare(self):
            return self.getTypedRuleContext(CSELParser.Many_var_declareContext,0)


        def many_const_declare(self):
            return self.getTypedRuleContext(CSELParser.Many_const_declareContext,0)


        def many_func_declare(self):
            return self.getTypedRuleContext(CSELParser.Many_func_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.many_var_declare()

            self.state = 93
            self.many_const_declare()

            self.state = 94
            self.many_func_declare()
            self.state = 95
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_declare(self):
            return self.getTypedRuleContext(CSELParser.One_var_declareContext,0)


        def many_var_declare(self):
            return self.getTypedRuleContext(CSELParser.Many_var_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_many_var_declare




    def many_var_declare(self):

        localctx = CSELParser.Many_var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_var_declare)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.one_var_declare()
                self.state = 98
                self.many_var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.one_var_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def id_list(self):
            return self.getTypedRuleContext(CSELParser.Id_listContext,0)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_one_var_declare




    def one_var_declare(self):

        localctx = CSELParser.One_var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_one_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(CSELParser.LET)
            self.state = 105
            self.id_list()
            self.state = 106
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_const_declare(self):
            return self.getTypedRuleContext(CSELParser.One_const_declareContext,0)


        def many_const_declare(self):
            return self.getTypedRuleContext(CSELParser.Many_const_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_many_const_declare




    def many_const_declare(self):

        localctx = CSELParser.Many_const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_const_declare)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.one_const_declare()
                self.state = 109
                self.many_const_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.one_const_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def id_list_const(self):
            return self.getTypedRuleContext(CSELParser.Id_list_constContext,0)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_one_const_declare




    def one_const_declare(self):

        localctx = CSELParser.One_const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_one_const_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CSELParser.CONSTANT)
            self.state = 116
            self.id_list_const()
            self.state = 117
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list_element(self):
            return self.getTypedRuleContext(CSELParser.Id_list_elementContext,0)


        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(CSELParser.Id_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_id_list




    def id_list(self):

        localctx = CSELParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.id_list_element()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COMMA:
                self.state = 120
                self.match(CSELParser.COMMA)
                self.state = 121
                self.id_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def composit(self):
            return self.getTypedRuleContext(CSELParser.CompositContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def Typ(self):
            return self.getToken(CSELParser.Typ, 0)

        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def array_literal(self):
            return self.getTypedRuleContext(CSELParser.Array_literalContext,0)


        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_id_list_element




    def id_list_element(self):

        localctx = CSELParser.Id_list_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_list_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 124
                self.match(CSELParser.ID)
                pass

            elif la_ == 2:
                self.state = 125
                self.match(CSELParser.ID)
                self.state = 126
                self.composit()
                pass


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 129
                self.match(CSELParser.COLON)
                self.state = 130
                self.match(CSELParser.Typ)


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 133
                self.match(CSELParser.ASSIGN)
                self.state = 136
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CSELParser.LSB]:
                    self.state = 134
                    self.array_literal()
                    pass
                elif token in [CSELParser.BOOLEAN_LITERAL, CSELParser.LB, CSELParser.NUM_LITERAL, CSELParser.STRING_LITERAL]:
                    self.state = 135
                    self.literal()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list_element_const(self):
            return self.getTypedRuleContext(CSELParser.Id_list_element_constContext,0)


        def COMMA(self):
            return self.getToken(CSELParser.COMMA, 0)

        def id_list_const(self):
            return self.getTypedRuleContext(CSELParser.Id_list_constContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_id_list_const




    def id_list_const(self):

        localctx = CSELParser.Id_list_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.id_list_element_const()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COMMA:
                self.state = 141
                self.match(CSELParser.COMMA)
                self.state = 142
                self.id_list_const()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_element_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_const(self):
            return self.getToken(CSELParser.ID_const, 0)

        def composit(self):
            return self.getTypedRuleContext(CSELParser.CompositContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def Typ(self):
            return self.getToken(CSELParser.Typ, 0)

        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def array_literal(self):
            return self.getTypedRuleContext(CSELParser.Array_literalContext,0)


        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_id_list_element_const




    def id_list_element_const(self):

        localctx = CSELParser.Id_list_element_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list_element_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 145
                self.match(CSELParser.ID_const)
                pass

            elif la_ == 2:
                self.state = 146
                self.match(CSELParser.ID_const)
                self.state = 147
                self.composit()
                pass


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 150
                self.match(CSELParser.COLON)
                self.state = 151
                self.match(CSELParser.Typ)


            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 154
                self.match(CSELParser.ASSIGN)
                self.state = 157
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CSELParser.LSB]:
                    self.state = 155
                    self.array_literal()
                    pass
                elif token in [CSELParser.BOOLEAN_LITERAL, CSELParser.LB, CSELParser.NUM_LITERAL, CSELParser.STRING_LITERAL]:
                    self.state = 156
                    self.literal()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.LSB)
            else:
                return self.getToken(CSELParser.LSB, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.RSB)
            else:
                return self.getToken(CSELParser.RSB, i)

        def NUM_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.NUM_LITERAL)
            else:
                return self.getToken(CSELParser.NUM_LITERAL, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_composit




    def composit(self):

        localctx = CSELParser.CompositContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_composit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 161
                self.match(CSELParser.LSB)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.NUM_LITERAL:
                    self.state = 162
                    self.match(CSELParser.NUM_LITERAL)
                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.COMMA:
                    self.state = 168
                    self.match(CSELParser.COMMA)
                    self.state = 169
                    self.match(CSELParser.NUM_LITERAL)
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 175
                self.match(CSELParser.RSB)
                self.state = 178 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CSELParser.LSB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def array_literal_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Array_literal_elementContext)
            else:
                return self.getTypedRuleContext(CSELParser.Array_literal_elementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_array_literal




    def array_literal(self):

        localctx = CSELParser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(CSELParser.LSB)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.BOOLEAN_LITERAL) | (1 << CSELParser.LB) | (1 << CSELParser.LSB) | (1 << CSELParser.NUM_LITERAL) | (1 << CSELParser.STRING_LITERAL))) != 0):
                self.state = 181
                self.array_literal_element()
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.COMMA:
                    self.state = 182
                    self.match(CSELParser.COMMA)

                    self.state = 183
                    self.array_literal_element()
                    self.state = 188
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 191
            self.match(CSELParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literal_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_literal(self):
            return self.getTypedRuleContext(CSELParser.Array_literalContext,0)


        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_array_literal_element




    def array_literal_element(self):

        localctx = CSELParser.Array_literal_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_literal_element)
        try:
            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LSB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.array_literal()
                pass
            elif token in [CSELParser.BOOLEAN_LITERAL, CSELParser.LB, CSELParser.NUM_LITERAL, CSELParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_LITERAL(self):
            return self.getToken(CSELParser.NUM_LITERAL, 0)

        def BOOLEAN_LITERAL(self):
            return self.getToken(CSELParser.BOOLEAN_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(CSELParser.STRING_LITERAL, 0)

        def json(self):
            return self.getTypedRuleContext(CSELParser.JsonContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_literal




    def literal(self):
